<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="copyright">© SizBlast - 2014</string>
    <string name="app_name">Sudoku</string>
    <string name="title_activity_sudoku">Sudoku</string>
    <string name="main_title">Android Sudoku</string>
    <string name="continue_label">Continue</string>
    <string name="new_game_label">New game</string>
    <string name="about_label">About</string>
    <string name="exit_label">Exit</string>
    <string name="about_text">Een <b>Sudoku</b> is een puzzel bestaande uit negen
        bij negen vakjes die gegroepeerd zijn als negen blokken van drie bij
        drie vakjes. In de vakjes moeten de cijfers 1 tot en met 9 Ingevuld
        worden op zo\'n manier dat in elke horizontale lijn en in elke verticale
        kolom en in elk van de negen blokjes de cijfers 1 tot en met 9 een
        keer voorkomen. In een aantal vakjes zijn de cijfers al ingevuld.
        Een <b>Sudoku</b> is dus een bijzonder geval van een Latijns vierkant.</string>



    <string name="music_title">Music</string>
    <string name="music_summary">Play background music</string>
    <string name="hints_title">Hints</string>
    <string name="hints_summary">Show hints during play</string>
    <string name="action_settings">Settings</string><string name="settings_label">Settings ...</string>
    <string name="setting_title">Sudoku Setting</string>
    <string name="settings_shortcut">s</string>

    <string name="title_activity_about">About</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_game">Game</string>

    <string name="game_title">Game</string>
    <string name="no_moves_label">No moves</string>
    <string name="keypad_title">Keypad</string>

    <string name="new_game_title">Difficulty</string>
    <string name="easy_label">Easy</string>
    <string name="medium_label">Medium</string>
    <string name="hard_label">Hard</string>

</resources>
