<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:textSize="30sp"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/continue_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue_label"
        android:layout_marginBottom="5dp"
        android:padding="15dp"/>

    <Button
        android:id="@+id/new_game_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_game_label"
        android:layout_marginBottom="5dp"
        android:padding="15dp"/>

    <Button
        android:id="@+id/about_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_label"
        android:layout_marginBottom="5dp"
        android:padding="15dp"/>

    <Button
        android:id="@+id/exit_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit_label"
        android:layout_marginBottom="5dp"
        android:padding="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="5dp"/>

</LinearLayout>
